--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                         <div class="card margin-bottom-20px red-custom-bg border-none">
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
+                                    <a href="inscritos" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR LISTADO INSCRITOS</a>
                                     <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA COMPLETA</a>
                                     <a href="guia-cadeba" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA CADEBA</a>
                                     <a href="reglamento" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR REGLAMENTO</a>
@@ -188,6 +189,12 @@
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">INSCRIPCIONES CERRADAS</h5>
                                     <a><img class="artists-image" src="2025/cerradas.png" /></a>
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">LISTADO INSCRITOS</h5>
+                                    <a><img class="artists-image" src="2025/listado-inscritos.png" /></a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
