--- a/inscritos.html
+++ b/inscritos.html
@@ -3,7 +3,7 @@
 
 <head>
     <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
-    <meta http-equiv="refresh" content="0; url=https://califamountainfestival.com/2025/guia-cadeba.pdf" />
+    <meta http-equiv="refresh" content="0; url=2025/listado-inscritos.pdf" />
 
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <!-- Title -->
-    <title>GUIA CADEBA Califa Mountain Festival</title>
+    <title>INSCRITOS 4 Califa Mountain Festival 2025</title>
 
     <!-- Favicon -->
     <link rel="icon" href="assets/favicon.ico">
