--- a/index.html
+++ b/index.html
@@ -179,8 +179,13 @@
                         <div class="card margin-bottom-20px red-custom-bg border-none">
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
-                                    <a href="resultados-nocturna" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS NOCTURNA</a>
-                                    <a href="resultados-nocturna" target="_blank"><img class="artists-image" src="2025/resultados-nocturna.png" /></a>
+
+
+                                    <a href="https://masatletismocrono.com/20-08-califa-mountain-festival-etapa-2-la-califa/" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS SÁBADO LARGA</a>
+
+                                    <a href="https://masatletismocrono.com/20-08-califa-mountain-festival-cxm-mini-la-califita/" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS SÁBADO CORTA</a>
+
+                                    <a href="resultados-nocturna" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS VIERNES NOCTURNA</a>
 
                                     <a href="inscritos" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR LISTADO INSCRITOS</a>
                                     <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA COMPLETA</a>
